# topology-manager

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierrc  CHANGELOG.md  Dockerfile  LOCAL_INSTALL.md  Makefile  README.md  advanced-config.example.json  all.do  config.json  conftest.py  default.sql.do  defs.sh  docker-compose.develop.yaml  docker-compose.yaml  geologic-map-config.example.json  map-colors.txt  package-lock.json  package.json  pyproject.toml  refresh-map  refresh-views  style.json  test.js  tsconfig.json  update-colors  update-fixtures  update-map
__archive/: LOCAL_INSTALL.md
display/: create-views  fgdc-colors  update-colors
docker-assets/: docker-local-test-config.json  docker-map-config.json  entry-script  geologic-map-config.json  run
extensions/: map-digitizer.sql  unit-hierarchy.sql
fixtures/: 01-data-tables.sql  01-map-face.sql  02-map-contact.sql  02-topology-tables.sql  03-topology-views.sql  04-topology-functions.sql  05-contact-triggers.sql  05-linework-triggers.sql  06-linework-triggers.sql  06-polygon-triggers.sql  07-map-face-triggers.sql  08-linework-notify.sql  08-notify.sql  09-server-functions.sql  09-topology-notify.sql  10-demo-units.sql  11-reshape-function.sql  map-contact.sql  map-face.sql
procedures/: clean-topology-01.sql  clean-topology-02.sql  clean-topology-heal-edge.sql  clean-topology-rem-edge.sql  clean-topology.sql  count-contact.sql  delete-changed.sql  delete-topology.sql  get-contacts-to-update.sql  get-edges-to-delete.sql  get-edges-to-heal.sql  linework-failures.sql  post-update-contacts.sql  (+6 more)
(+236 files in other folders)
